<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_car"
        android:icon="@drawable/ic_car"
        android:title="@string/navigationCarTitle" />

    <item
        android:id="@+id/navigation_motorcycle"
        android:icon="@drawable/ic_motorcycle"
        android:title="@string/navigationMotorcycleTitle" />

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/navigationHomeTitle" />

    <item
        android:id="@+id/navigation_other"
        android:icon="@drawable/ic_other"
        android:title="@string/navigationOtherTitle" />

    <item
        android:id="@+id/navigation_freezone"
        android:icon="@drawable/ic_freezone"
        android:title="@string/navigationFreezoneTitle" />

</menu>
