<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_car"
        android:name="ir.rezarasoulzadeh.pelakomak.view.fragment.CarFragment"
        android:label="@string/fragmentCarLabel"
        tools:layout="@layout/fragment_for_car" />

    <fragment
        android:id="@+id/navigation_motorcycle"
        android:name="ir.rezarasoulzadeh.pelakomak.view.fragment.MotorcycleFragment"
        android:label="@string/fragmentMotorcycleLabel"
        tools:layout="@layout/fragment_for_motorcycle" />

    <fragment
        android:id="@+id/navigation_home"
        android:name="ir.rezarasoulzadeh.pelakomak.view.fragment.HomeFragment"
        android:label="@string/fragmentHomeLabel"
        tools:layout="@layout/fragment_for_home" />

    <fragment
        android:id="@+id/navigation_other"
        android:name="ir.rezarasoulzadeh.pelakomak.view.fragment.OtherFragment"
        android:label="@string/fragmentOtherLabel"
        tools:layout="@layout/fragment_for_other" />

    <fragment
        android:id="@+id/navigation_freezone"
        android:name="ir.rezarasoulzadeh.pelakomak.view.fragment.FreezoneFragment"
        android:label="@string/fragmentFreezoneLabel"
        tools:layout="@layout/fragment_for_freezone" />
</navigation>